# Open-paw-V1

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/dashboard-web/: DEPRECATED.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/dashboard-web/src/: index.css  main.tsx  router.tsx
apps/dashboard-web/src/api/: client.ts
apps/dashboard-web/src/data/: mock.ts
apps/dashboard-web/src/pages/: AnimalDetailPage.tsx  AnimalsPage.tsx  DashboardHome.tsx  GrantDetailPage.tsx  GrantsPage.tsx  LoginPage.tsx  LostFoundPage.tsx  NewAnimalPage.tsx  PeoplePage.tsx  ReportsPage.tsx  ResourcesPage.tsx  SettingsPage.tsx  TasksPage.tsx
apps/dashboard-web/src/tests/: animals.test.ts
apps/dashboard-web/src/types/: index.ts
apps/landing-web/: DEPRECATED.md  astro.config.mjs  package.json  tailwind.config.mjs
apps/landing-web/src/content/: config.ts
apps/landing-web/src/layouts/: BaseLayout.astro
apps/landing-web/src/pages/: docs.astro  download.astro  funding-radar.astro  index.astro  security.astro
apps/web/: .gitignore  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  routes-manifest.json  trace
apps/web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
apps/web/.next/types/: routes.d.ts  validator.ts
apps/web/src/__tests__/: blog.test.ts  mockClient.test.ts  setup.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  permissions.rs  roles.rs  session.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  provider.rs
crates/llm/src/adapters/: stub.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: capabilities.rs  lib.rs  manifest.rs
crates/policy/: Cargo.toml
crates/policy/src/: decisions.rs  engine.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 20240101000001_create_tenants.sql  20240101000002_create_users.sql  20240101000003_create_animals.sql  20240101000004_create_people.sql  20240101000005_create_medical.sql  20240101000006_create_tasks.sql  20240101000007_create_lost_found.sql  20240101000008_create_grants.sql  20240101000009_create_resources.sql  20240101000010_create_audit.sql  20240101000011_seed_dev_data.sql
crates/storage/src/: db.rs  error.rs  lib.rs
crates/storage/src/repositories/: animals.rs  mod.rs  tenants.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FUNDING_RADAR.md  IMPLEMENTATION_NOTES.md  LANDING_AND_BLOG.md  LOCAL_DEVELOPMENT.md  PLAN.md  ROADMAP.md  SECURITY.md  TESTING.md  VERCEL_DEPLOYMENT.md
services/api/: Cargo.toml
services/api/src/: config.rs  error.rs  main.rs  state.rs
services/api/src/middleware/: request_id.rs
services/api/src/routes/: animals.rs  grants.rs  health.rs  mod.rs  tenants.rs
services/api/tests/: api_integration.rs
(+264 files in other folders)
