[package]
name = "open-paw-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

open-paw-core = { path = "../../crates/core" }
open-paw-storage = { path = "../../crates/storage" }
open-paw-auth = { path = "../../crates/auth" }
open-paw-policy = { path = "../../crates/policy" }
